# 1-weather-forecast-service

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  download_cities.py  test_weather.py
backend/app/: main.py
backend/app/api/routes/: metrics.py  predict.py  refresh_data.py  train.py  weather_data.py
backend/app/data/: feature_engineering.py  fetch_weather.py  lstm_preprocessing.py  model_preprocessing.py  storage.py  weather_loader.py
backend/app/models/: arima_model.py  base_model.py  lstm_model.py  model_registry.py  random_forest_model.py
backend/app/schemas/: forecast_schema.py  predict_schema.py  train_schema.py
backend/app/services/: data_refresh_service.py  forecast_service.py  metrics_service.py  prediction_service.py  training_service.py
frontend/: Dockerfile  app.py
notebooks/: eda_weather.ipynb
