[project]
name = "1-weather-forecast-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
